syntax = "proto3";

package taxonomy.v1;

option go_package = "taxonomy-client/proto/taxonomy/v1;taxonomypb";

// Request definitions
message GetTaxonomyByIdRequest {
  string taxonomy_id = 1;
}

// Response definitions
message GetTaxonomyByIdResponse {
  TaxonomyInfo taxonomy_info = 1;
}

enum NodeType {
  NODETYPE_UNDEFINED = 0;
  CLASS = 1;
  SUBJECT = 2;
  SUPER_TOPIC = 3;
  TOPIC = 4;
  SUBTOPIC = 5;
  CONCEPT = 6;
}

message RelatedNode {
  string taxonomy_id = 1;
  string node_id = 2;
}

message Node {
  string id = 1;
  string name = 2;
  string description = 3;
  string short_code = 4;
  string parent_node = 5;
  NodeType node_type = 6;
  repeated RelatedNode related_nodes = 7;
  repeated string children = 8;
  repeated string ancestors = 9;
  bool inactive = 10;
}

message TaxonomyInfo {
  string taxonomy_id = 1;
  string name = 2;
  string description = 3;
  string version = 4;
  string tenant_id = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
  map<string, Node> nodes = 8;
  repeated string root_nodes = 9;
  repeated string levels = 10;
}

service Taxonomy {
  rpc GetTaxonomyById(GetTaxonomyByIdRequest) returns (GetTaxonomyByIdResponse);
}
